--- a/FrontEnd/HTML/index.html
+++ b/FrontEnd/HTML/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <p>This is from html page</p>
+        <h1>This is from html page</h1npm install>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="/js/index.js"></script>
