new html file added

--- a/FrontEnd/HTML/second.html
+++ b/FrontEnd/HTML/second.html
@@ -5,18 +5,9 @@
     </head>
 
     <body>
-        
-        <table border: 1px>
-            <h2 style="text-align: center; background-color:powderblue;"><u>RESUME</u></h2>
-        </table>
-        <table style="margin-left: 20px; border-style: solid;">
-           <tr><h5><b>NAME&nbsp:&nbspUppalanchi Venkatesh</b></h5></tr>
-           <tr>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <small>an indian citizen</small></tr>
-        </table>
+        <h1>This is second HTML page</h1>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="/js/index.js"></script>
-        <a href="second.html">click here</a>
-        
     </body>
 </html>
