--- a/FrontEnd/HTML/second.html
+++ b/FrontEnd/HTML/second.html
@@ -5,9 +5,19 @@
     </head>
 
     <body>
-        <h1>This is second HTML page</h1>
+        <h2 style="text-align: center; background-color: powderblue;"><u>RESUME</u></h2>
+        <span>
+            <h3 style="margin-bottom: -20px;"><pre>NAME : Uppalanchi Venkatesh</pre></h3>
+            <small><pre>                        an indian citizen     </pre></small>
+        </span style="display: inline;">
+        <span style="margin-left: 100px;">
+            <h4><pre>PH NO : +91 7095944735</pre></h4>
+            <h4><pre>Email id : uppalanchivenkatesh@gmail.com</pre></h4>
+        </span>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="/js/index.js"></script>
+
+        <a href="/">home page</a>
     </body>
 </html>
