--- a/FrontEnd/HTML/index.html
+++ b/FrontEnd/HTML/index.html
@@ -6,17 +6,10 @@
 
     <body>
         
-        <table border: 1px>
-            <h2 style="text-align: center; background-color:powderblue;"><u>RESUME</u></h2>
-        </table>
-        <table style="margin-left: 20px; border-style: solid;">
-           <tr><h5><b>NAME&nbsp:&nbspUppalanchi Venkatesh</b></h5></tr>
-           <tr>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <small>an indian citizen</small></tr>
-        </table>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="/js/index.js"></script>
-        <a href="second.html">click here</a>
-        
+        <a href="/second">click here</a>
+
     </body>
 </html>
