--- a/FrontEnd/HTML/second.html
+++ b/FrontEnd/HTML/second.html
@@ -18,6 +18,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="/js/index.js"></script>
 
-        <a href="/">home page</a>
+        <a href="/"><button>Home page</button></a>
     </body>
 </html>
