Tambola game again

--- a/FrontEnd/HTML/tambola.html
+++ b/FrontEnd/HTML/tambola.html
@@ -17,8 +17,8 @@
         <h1><p id="rcorners2"></p></h1>
         </span><br>
         <div style="text-align: center;">
-        <button onclick="generateNum()"><b>Genarate Number</button></b>
-        <button onclick="clearboard()"><b>Clear Board</button></b>
+        <button onclick="generateNum()"><b>Genarate Number</b></button>
+        <button onclick="clearboard()"><b>Clear Board</b></button>
         </div><br><br>
 
         <table class="table2">
