--- a/FrontEnd/HTML/tambola.html
+++ b/FrontEnd/HTML/tambola.html
@@ -3,7 +3,7 @@
         <title>Tambola game</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
-        <link rel="stylesheet" href="/css/tambola.css" />
+        <link type="text/css" rel="stylesheet" href="/css/tambola.css" />
     </head>
 
     <body>
