--- a/FrontEnd/HTML/tambola.html
+++ b/FrontEnd/HTML/tambola.html
@@ -3,7 +3,7 @@
         <title>Tambola game</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
-        <link type="text/css" rel="stylesheet" href="/css/tambola.css" >
+        <link type="text/css" rel="stylesheet" href="/CSS/tambola.css" >
     </head>
 
     <body>
@@ -39,6 +39,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js"></script>
-        <script src="/js/tambola.js"></script>
+        <script src="/JS/tambola.js"></script>
     </body>
 </html>
