--- a/FrontEnd/HTML/clock.html
+++ b/FrontEnd/HTML/clock.html
@@ -1,15 +1,14 @@
 <html>
     <head>
+        <title>Clock</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="/CSS/index.css" />
+        <link rel="stylesheet" href="/CSS/clock.css" />
     </head>
-
     <body>
-        <div>RESUME : <a href="/second">click here</a></div>
-        <div>TAMBOLA : <a href="/tambola">click here</a></div>
-        <div>CLOCK : <a href="/clock">click here</a></div>
+        <canvas id="canvas" width="400" height="400" style="background-color:#DAA520"></canvas>
+        <div><a href="\"><button>Home page</button></a></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-        <script src="/JS/index.js"></script>
+        <script src="/JS/clock.js"></script>
     </body>
 </html>
