--- a/FrontEnd/HTML/clock.html
+++ b/FrontEnd/HTML/clock.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/CSS/clock.css" />
     </head>
     <body>
-        <canvas id="canvas" width="400" height="400" style="background-color:#DAA520"></canvas>
+        <canvas id="canvas" width="400" height="400" style="background-color:powderblue"></canvas>
         <div><a href="\"><button>Home page</button></a></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
