Just changed home page

--- a/FrontEnd/HTML/index.html
+++ b/FrontEnd/HTML/index.html
@@ -5,9 +5,11 @@
     </head>
 
     <body>
-        <div>RESUME : <a href="/second">click here</a></div>
-        <div>TAMBOLA : <a href="/tambola">click here</a></div>
-        <div>CLOCK : <a href="/clock">click here</a></div>
+    <div class="mydiv">
+        <div><h4 style="float: left;">RESUME :</h4><a href="/second">click here</a></div>
+        <div><h4 style="float: left;">TAMBOLA :</h4><a href="/tambola">click here</a></div>
+        <div><h4 style="float: left;">CLOCK :</h4><a href="/clock">click here</a></div>
+    </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="/JS/index.js"></script>
