Just changed home page

--- a/FrontEnd/HTML/index.html
+++ b/FrontEnd/HTML/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="/CSS/index.css" />
     </head>
 
-    <body>
+    <body class="mybody">
     <div class="mydiv">
         <div><h4 style="float: left;">RESUME :</h4><a href="/second">click here</a></div>
         <div><h4 style="float: left;">TAMBOLA :</h4><a href="/tambola">click here</a></div>
