--- a/FrontEnd/HTML/Login.html
+++ b/FrontEnd/HTML/Login.html
@@ -30,13 +30,13 @@
         <form class="myform" action="/loginuser" method="POST">
             <div class="form-group">
               <label for="username">User Name</label>
-              <input type="username" class="form-control" name="username">
+              <input type="username" required class="form-control" name="username">
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password">
+              <input type="password" required class="form-control" name="password">
             </div>
-            <button type="submit" class="btn btn-primary" href="\dashboard">Login</button>
+            <button type="submit" class="btn btn-primary" href="/dashboard">Login</button>
             <p style="margin-top: 10;"><b>New User?</b>  <a href="/register">click here</a></p>
           </form>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
