--- a/FrontEnd/HTML/Dashboard.html
+++ b/FrontEnd/HTML/Dashboard.html
@@ -1,10 +1,11 @@
 <html>
     <head>
+        <title>Dashboard</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/CSS/Bootstrap.css"/>
     </head>
     <body>
-        <h1>Welcome User</h1>
+        <h1 style="text-align: center; margin-top: 150;" >Welcome User</h1>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="/JS/Bootstrap.js"></script>
