--- a/FrontEnd/HTML/Login.html
+++ b/FrontEnd/HTML/Login.html
@@ -20,9 +20,9 @@
               <li class="nav-item">
                   <a class="nav-link" href="/register">Sign Up</a>
               </li>
-              <li class="nav-item">
+              <!--<li class="nav-item">
                 <a class="nav-link" href="/dashboard">Dashboard</a>
-              </li>
+              </li>-->
             </ul>
           </div>
         </nav>
@@ -36,7 +36,7 @@
               <label for="password">Password</label>
               <input type="password" required class="form-control" name="password">
             </div>
-            <button type="submit" class="btn btn-primary" href="/dashboard">Login</button>
+            <button type="submit" class="btn btn-primary">Login</button>
             <p style="margin-top: 10;"><b>New User?</b>  <a href="/register">click here</a></p>
           </form>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
