--- a/FrontEnd/HTML/Homepage.html
+++ b/FrontEnd/HTML/Homepage.html
@@ -20,13 +20,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/register">Sign Up</a>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                   <a class="nav-link" href="/dashboard">Dashboard</a>
-                </li>
+                </li>-->
               </ul>
             </div>
           </nav>
-          <h1 style="text-align: center; margin-top: 150;">This is Homepage</h1>
+          <h1 style="text-align: center; margin-top: 150;">Welcome to Homepage</h1>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="/JS/Bootstrap.js"></script>
