--- a/FrontEnd/HTML/Register.html
+++ b/FrontEnd/HTML/Register.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/CSS/Bootstrap.css"/>
     </head>
-    <body class="myregister">
+    <body>
         <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -20,9 +20,9 @@
               <li class="nav-item active">
                   <a class="nav-link" href="/register" style="color: red;">Sign Up</a>
               </li>
-              <li class="nav-item">
+              <!--<li class="nav-item">
                 <a class="nav-link" href="/dashboard">Dashboard</a>
-              </li>
+              </li>-->
             </ul>
           </div>
         </nav>
@@ -40,7 +40,7 @@
             <label for="password">Password</label>
             <input type="password" required class="form-control" name="password"> 
           </div>
-          <button type="submit" class="btn btn-primary" href="/login">Register</button>
+          <button type="submit" class="btn btn-primary">Register</button>
         </form>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
