--- a/FrontEnd/HTML/index.html
+++ b/FrontEnd/HTML/index.html
@@ -6,7 +6,8 @@
 
     <body class="mybody">
     <div class="mydiv">
-        <div><h4 style="float: left;">RESUME :</h4><a href="/second">click here</a></div>
+        <div><h4 style="float: left;">HOMEPAGE :</h4><a href="/homepage">click here</a></div>
+        <div><h4 style="float: left;">RESUME :</h4><a href="/resume">click here</a></div>
         <div><h4 style="float: left;">TAMBOLA :</h4><a href="/tambola">click here</a></div>
         <div><h4 style="float: left;">CLOCK :</h4><a href="/clock">click here</a></div>
     </div>
