--- a/FrontEnd/HTML/Homepage.html
+++ b/FrontEnd/HTML/Homepage.html
@@ -2,7 +2,7 @@
     <head>
         <title>Homepage</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="/CSS/Bootstrap.css"/>
+        <link rel="stylesheet" href=""/>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
@@ -12,7 +12,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/" style="color: red;">Home</a>
+                  <a class="nav-link" href="/homepage" style="color: red;">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/login">Goto login</a>
@@ -20,15 +20,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/register">Sign Up</a>
                 </li>
-                <!--<li class="nav-item">
-                  <a class="nav-link" href="/dashboard">Dashboard</a>
-                </li>-->
               </ul>
             </div>
           </nav>
           <h1 style="text-align: center; margin-top: 150;">Welcome to Homepage</h1>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-        <script src="/JS/Bootstrap.js"></script>
+        <script src=""></script>
     </body>
 </html>
