--- a/FrontEnd/HTML/Login.html
+++ b/FrontEnd/HTML/Login.html
@@ -2,7 +2,7 @@
     <head>
         <title>LoginPage</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="/CSS/Bootstrap.css"/>
+        <link rel="stylesheet" href="/CSS/LoginandRegister.css"/>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
@@ -20,14 +20,12 @@
               <li class="nav-item">
                   <a class="nav-link" href="/register">Sign Up</a>
               </li>
-              <!--<li class="nav-item">
-                <a class="nav-link" href="/dashboard">Dashboard</a>
-              </li>-->
             </ul>
           </div>
         </nav>
         <h1 style="text-align: center; margin-top: 30;">Login</h1>
-        <form class="myform" action="/loginuser" method="POST">
+        <form class="myform" action="/login" method="POST">
+            <h3 id="messages" style="color: black;"></h3>
             <div class="form-group">
               <label for="username">User Name</label>
               <input type="username" required class="form-control" name="username">
@@ -41,6 +39,6 @@
           </form>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-        <script src="/JS/Bootstrap.js"></script>
+        <script src="../../Backend/Passport/passport-config.js"></script>
     </body>
 </html>
