--- a/FrontEnd/HTML/Register.html
+++ b/FrontEnd/HTML/Register.html
@@ -2,7 +2,7 @@
     <head>
         <title>RegisterPage</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="/CSS/Bootstrap.css"/>
+        <link rel="stylesheet" href="/CSS/LoginandRegister.css"/>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
@@ -20,9 +20,6 @@
               <li class="nav-item active">
                   <a class="nav-link" href="/register" style="color: red;">Sign Up</a>
               </li>
-              <!--<li class="nav-item">
-                <a class="nav-link" href="/dashboard">Dashboard</a>
-              </li>-->
             </ul>
           </div>
         </nav>
