--- a/FrontEnd/HTML/Resume.html
+++ b/FrontEnd/HTML/Resume.html
@@ -9,11 +9,12 @@
 </head>
 
 <body>
+  
   <div class="container">
     <div class="right">
     <h1 style="text-align: center;"><u>RESUME</u></h1>
     <div>
-      <h2 style="margin-bottom: -20px;"><pre>NAME : Uppalanchi Venkatesh</pre></h2>
+      <h2 style="margin-bottom: -20px;"><pre><b>NAME : Uppalanchi Venkatesh</b></pre></h2>
       <small><pre>                        an indian citizen     </pre></small>
     </div>
             <h3>Contact</h3>
